# paronyms

./: 1B3E.txt  Affixes.txt  All.txt  CMakeLists.txt  KVAZI.TXT  Letters permutation.txt  PARON1.TXT  ParonStatistics.sln  ParonStatistics.vcproj  ParonStatistics.vcxproj  ParonStatistics.vcxproj.filters  Paronyms.ipynb  README.md  RED.TXT  RunMe.bat  SVN.txt  deleted.txt  false_paronyms.txt  false_paronyms_1.txt  negative.txt  no_training.sh  not_affix_but_paronyms2.txt  not_in.txt  not_paronyms_but_affix2000.txt  not_paronyms_but_affix5000.txt  out.txt  petAffixes.txt  run.sh  true_paronyms.txt  true_second.txt  Инструкция по сборке.doc  Инструкция по сборке.odt
